<?xml version="1.0"?>
<package format="2">
	<name>arduino_port_lib</name>
	<version>1.0.0</version>
	<description>A port for arduino-based code to work with the Raspberry Pi. Mainly aimed at the Wire and SPI functionality of the Arduino.</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<maintainer email="steelena@clarkson.edu">Nicholas Steele</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>
